doc: post swagger
